[BGPT] Create transform paint property node for backface-visibility:hidden

The node is needed for PaintArtifactCompositor to correctly set
backface visibility properties of cc layers.

Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Bug: 879364
Change-Id: Idc8241988f1582a160f816371e137c4ce03f4aa2
Reviewed-on: https://chromium-review.googlesource.com/1217909
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590555}
Former-commit-id: d18aae4354456a1d242730c10e21cf73c9356b67